header and footer

--- a/practiceContainer.html
+++ b/practiceContainer.html
@@ -3,25 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <title> Open Test </title>
+	<link rel="stylesheet" href="css/css.css" type="text/css">
 </head>
 <body style="margin:0; padding:0">
-<div style="max-height: 100%;">
-    <div style="color: white; background-color:#000; height: 40px; float: left; width:100%;">
-        <p> Top Menu</p>
+<div class="main">
+        <center>
+
+<img src="images/phone.png" height="20px" align="bottom" margin-top = "50px">
+<a href="#"  title="tel: +2348028320789" text-decoration="none">   +2348028320789    </a> &nbsp;&nbsp;&nbsp;
+<img src="images/msg.png" height="15px">
+<a href="#" title="mailto:servicedesk@gifmis.gov.ng">    servicedesk@gifmis.gov.ng     </a>  &nbsp;&nbsp;&nbsp;
+<img src="images/timer.png" height="20px" align="bottom">
+<a> Mon - Sun 8.00am - 12.00noon </a>  
+</center> 
     </div>
-    <div style="background-color:#00cc00; height: 70px;">
-        <div style="text-align: center;"><header>
-            <p>Main Menu</p>
-        </header></div>
+<div class="secondheader">
+<header>
+            <table width="100%" height="13" cellspacing="1" cellpadding="1" border="0" align="center" > 
+<td width="20%"> 
+<img src="images/coa.png" href="https://www.opentreasury.gov.ng" display="block" width="110" height="90" align="right"  title="https://www.opentreasury.gov.ng" >
+</td>
+
+<td align="center">
+<p>
+<center>
+<a href="#" title="opentreasury.gov.ng/index.php">   &nbsp; Home    </a> &nbsp;&nbsp;
+
+
+<a> &nbsp; About Open Treasury  </a> &nbsp;&nbsp;
+
+<a href="#" title="opentreasury.gov.ng/index.php/news">   &nbsp; News    </a> &nbsp;&nbsp;
+<a href="#" title="opentreasury.gov.ng/index.php/contact-open-treasury">   &nbsp; Contact us    </a> &nbsp;&nbsp;
+<a href="#" title="opentreasury.gov.ng/index.php/faqs">   &nbsp; FAQs &nbsp;   </a> &nbsp; &nbsp; 
+<input  type="search" placeholder="Search..." size="8">  </input> 
+</center>
+</p>
+</td>
+</table>
+      
     </div>
+	  </header>
     <div style="width: 30%; background-color: red; height: 500px; float:left;">
         <p>Sidebar</p></div>
     <div style="height: 500px; width:70%; background-color:gray; float:left;">
         <p>Body Content</p>
     </div>
     <div class="foot" style="background-color:#000; color: white; float: left; width: 100%; height:10%;">
-        <div style="text-align: center;"><footer>
-            <p> Footer</p>
+        <div class="footnote">
+		<footer>
+           <center> &copy; 2021 FGN. All Rights Reserved. </center>
         </footer></div>
     </div>
 </div>
